# linux-wallpaperengine

./: .gitignore  CMakeLists.txt  Makefile  README.md
desktop/: .gitignore  README.md  package-lock.json  package.json  wpengine.desktop
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: engine.rs  http_daemon.rs  index.rs  lib.rs  main.rs  props.rs  settings.rs  state.rs  steam.rs
desktop/ui/: index.html
docs/rendering/: MDL_FILES.md
patches/: cef-fixes.patch
src/WallpaperEngine/Data/Builders/: ColorBuilder.cpp
src/WallpaperEngine/Data/Model/: Puppet.h
src/WallpaperEngine/Testing/Cases/: PropertyParser.cpp
src/WallpaperEngine/WebBrowser/: WebBrowserContext.cpp
src/WallpaperEngine/WebBrowser/CEF/: BrowserApp.cpp  BrowserClient.cpp  BrowserClient.h  RenderHandler.cpp  WPSchemeHandler.cpp  WPSchemeHandler.h
tooling/: lwe-daemon.py  lwe-daemon.service  lwe-index.py  lwe-launch  lwe-select  wallpapers.html
